# GestiondePedidos

./: Arbol.cpp  Arbol.h  CMakeLists.txt  Cola.cpp  Cola.h  Concepto  Lista.cpp  Lista.h  NodoArbol.cpp  NodoArbol.h  NodoCola.cpp  NodoCola.h  NodoLista.cpp  NodoLista.h  NodoPila.cpp  NodoPila.h  Pedido.cpp  Pedido.h  Pila.cpp  Pila.h  README.md  gestor.cpp  gestor.h  main.cpp  pedidos.txt
