cmake_minimum_required(VERSION 3.17)
project(Practica1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Practica1 main.cpp NodoCola.cpp NodoCola.h Pedido.cpp Pedido.h Cola.cpp Cola.h NodoPila.cpp NodoPila.h Pila.cpp Pila.h NodoLista.cpp NodoLista.h Lista.cpp Lista.h gestor.cpp gestor.h NodoArbol.cpp NodoArbol.h Arbol.cpp Arbol.h)